syntax = "proto3";

option go_package = "gitlab.com/inetmock/inetmock/internal/rpc";
option java_multiple_files = true;
option java_package = "com.github.baez90.inetmock.rpc";
option java_outer_classname = "AuditProto";

import 'pkg/audit/event_entity.proto';

package inetmock.rpc;

enum FileOpenMode {
    TRUNCATE = 0;
    APPEND = 1;
}

message WatchEventsRequest {
    string watcherName = 1;
}

message RegisterFileSinkRequest {
    string targetPath = 1;
    FileOpenMode openMode = 2;
    uint32 permissions = 3;
}

message RegisterFileSinkResponse {

}

message RemoveFileSinkRequest {
    string targetPath = 1;
}

message RemoveFileSinkResponse {
    bool SinkGotRemoved = 1;
}

service Audit {
    rpc WatchEvents (WatchEventsRequest) returns (stream inetmock.audit.EventEntity);
    rpc RegisterFileSink (RegisterFileSinkRequest) returns (RegisterFileSinkResponse);
    rpc RemoveFileSink (RemoveFileSinkRequest) returns (RemoveFileSinkResponse);
}